--- a/styles/themes/standard.less
+++ b/styles/themes/standard.less
@@ -1,8 +1,8 @@
 .standard {
   background-color: black;
-  color: white;
+  color: (32,178,170);
 
   .terminal-cursor {
-    background-color: white;
+    background-color: (205,92,92);
   }
 }
